--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,20 @@
    <pluginManagement>
       <plugins>
           <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-jar-plugin</artifactId>
+             <version>2.1</version>
+             <configuration>
+               <archive>
+                 <addMavenDescriptor>false</addMavenDescriptor>
+               </archive>
+               <finalName>KeepBabyMobs</finalName>
+             </configuration>
+          </plugin>
+          <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
-              <version>2.1</version>
+              <version>2.0.2</version>
               <configuration>
                   <source>1.7</source>
                   <target>1.7</target>
