--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
   <groupId>io.github.tompreuss</groupId>
   <artifactId>KeepBabyMobs</artifactId>
   <version>0.1</version>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
    <build>
    <pluginManagement>
       <plugins>
